# oss

./: README.md
lmd/: EditUser.pm  Makefile  OUT  PACKAGES  README  REQPACKAGES  SearchUserFiles  dispatch-full.pm  dispatch.pl  dispatch.pm  enhance_translation.pl  itool.pl  jk.conf  lmd.css  lmd.pl  lmd.spec.in  logrotate.lmd  rc.lmd  sysconfig.lmd
lmd/AddOns/: Makefile.common
lmd/alibs/: AddGroup.pm  AddOns.pm  AddUser.pm  AdminTools.pm  (+49 more)
openschool-base/: Makefile  PACKAGES  PRODNAME  REQPACKAGES  buildit-local  mkspec  openschool-base.spec.in
oss-evaluate-squidlogs/: DE_OSSEvaluateSquidlogs.ini  Makefile  OSSEvaluateSquidlogs.pm  make_squid_log_tmp.pl  oss-evaluate-squidlogs.spec.in  oss_evaluate_squid_logs.pl
oss-radius/: Makefile  oss-radius.spec.in
oss-svn/: Makefile  add_group.sh  del_group.sh  modify_group.sh  oss-svn.spec.in  setup-svn.sh
proxy-oss/: Makefile  PRODNAME  buildit-local  create-white-list.pl  create_squidguard-conf.sh  global_usage  proxy-oss.spec.template  read-shalla-lists.pl  squidguard-lib.pl
yast2-openschool-server/: Makefile  Makefile.am  Makefile.in  RPMNAME  config.status  create-spec  dhcp.schema  openschool-server.pot  yast2-openschool-server.spec.in
yast2-openschool-server/yast2-openschool-server/src/: Makefile.am  Makefile.in  OpenschoolServer.ycp  OpenschoolServerLDAP.pm  complex.ycp  create_cert.ycp  dialogs.ycp  gpg-pubkey-1878e87f-4278b884.asc  helps.ycp  inst_openschool-network.ycp  inst_openschool-reboot.ycp  openschool-network.ycp  openschool-network_proposal.ycp  openschool-server.ycp  openschool-server_auto.ycp
(+538 files in other folders)
